--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@ ul,li,ol{list-style: none;}
 a{text-decoration: none; color: inherit;}
 
 body{
-    background-color: #f2f2f2; color: #333;
+    /* background-color: #f2f2f2;  */
+    color: #333;
     font-family: Arial, "고딕" , Helvetica, sans-serif;
     font-size: 14px;
 }
@@ -23,7 +24,7 @@ body{
 
 #header{
     height: 100px;
-    background-color: lightblue;
+    /* background-color: lightblue; */
 }
 
 .logo{
@@ -204,20 +205,83 @@ body{
 }
 
 
-
-
-
-
-
 /* footer 영역 */
 #footer{
     height: 100px;
-    background-color: aqua;
+    /* background-color: aqua; */
+}
+
+.f_left{
+    width: 1000px;
+    height: 100px;
+    float: left;
+}
+
+.f_left > div{
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+}
+.f_menu{border-bottom: 1px solid gray;}
+
+.f_menu a:hover{
+    text-decoration: underline;
+}
+
+.f_menu a::after{
+    content: "|";
+    padding: 0 10px ;
+}
+
+.f_menu a:last-child::after{
+    display: none;
+}
+
+.family{
+    width: 200px;
+    height: 100px;
+    float: left;
+    text-align: center;
+    padding-top: 25px;
+}
+
+.family select{
+    width: 150px;
+    height: 50px;
 }
 
 
+/* 팝업영역 */
 
+.popup{
+    width: 400px; height: 500px;
+    background-color: white;
+    border: 10px groove #5b9bd5;
+    position: absolute;
+    left: 50%; top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    display: none;
+}
 
+.popup h3{
+    border-bottom: 5px double gray;
+    font-size: 20px;
+}
+
+.popup p{
+    padding-top: 20px;
+    line-height: 1.7;
+    text-align: justify;
+}
+
+.popup .close{
+    position: absolute;
+    right: 30px; 
+    bottom: 30px;
+    padding: 5px 20px;
+    cursor: pointer;
+}
 
 
 
